--- a/config/database.yml
+++ b/config/database.yml
@@ -8,17 +8,23 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-#
-default: &default
+# #
+# default: &default
+#   adapter: mysql2
+#   encoding: utf8
+#   pool: 5
+#   username: root
+#   password: password
+#   socket: /var/run/mysqld/mysqld.sock
+
+development:
+  # <<: *default
   adapter: mysql2
   encoding: utf8
   pool: 5
   username: root
   password: password
   socket: /var/run/mysqld/mysqld.sock
-
-development:
-  <<: *default
   database: promobi_assignment_development
 
 # Warning: The database defined as "test" will be erased and
@@ -48,7 +54,12 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: promobi_assignment_production
-  username: assignment
-  password: <%= ENV['ASSIGNMENT_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  database: promobiassignment_production
+  pool: 5
+  timeout: 5000
+# production:
+#   <<: *default
+#   database: promobi_assignment_production
+#   username: assignment
+#   password: <%= ENV['ASSIGNMENT_DATABASE_PASSWORD'] %>
