--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ development:
   encoding: utf8
   pool: 5
   username: root
-  password: root
+  password: password
   socket: /var/run/mysqld/mysqld.sock
   database: promobi_assignment_development
 
